# cicada

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  skaffold.yaml
service/chat/: BUILD.bazel  skaffold.yaml
service/chat/cmd/grpc-server/: BUILD.bazel
service/chat/deployments/helm/: Chart.yaml
service/chat/deployments/helm/templates/: _helpers.tpl
service/chat/deployments/infrastructure/cassandra/: TODO.txt
service/chat/deployments/infrastructure/valkey/: skaffold.yaml
service/chat/deployments/infrastructure/valkey/deployments/env/local/: values.yaml
service/cicada/cmd/deployments/: TODO.txt
service/cicada/cmd/grpc-server/: BUILD.bazel  main.go
service/shared/nats/: skaffold.yaml
shared/infrastructure/deployments/: TODO.txt
shared/infrastructure/nats/deployments/env/local/: values.yaml
tesserical/cicada/api/v1/: BUILD.bazel  chat.proto  device.proto  message.proto  user.proto
