load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "grpc-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/tesserical/cicada/service/cicada/cmd/grpc-server",
    visibility = ["//visibility:private"],
    deps = [
        "//tesserical/cicada/api/v1:cicadaapiv1pb",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "grpc-server",
    embed = [":grpc-server_lib"],
    visibility = ["//visibility:public"],
)
